Updated landing page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ title: Varisty Code
           Ages 14-18
         </h5>
         <h5>
-          February 16, 2017 - April 20, 2017
+          April 4, 2018 - June 20, 2018
         </h5>
         <h5>
           Classes Held at Salt Lake Community College in Sandy
@@ -41,30 +41,21 @@ title: Varisty Code
   <div class="row">
     <div class="col-lg-offset-1 col-lg-10">
       <div class="row">
-        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay=".09">
+        <div class="col-lg-4 col-sm-6 wow fadeIn" data-wow-delay=".09">
           <div class="icon-header text-center">
             <%= image_tag "basics.svg" %>
           </div>
-          <h4 class="text-center">Learn The Basics Of HTML and CSS</h4>
-          <p>The web isn't as hard as you think. We'll show you how to craft the technologies of HTML and CSS so your voice can be heard.</p>
+          <h4 class="text-center">Learn Web Development</h4>
+          <p>The web isn't as hard as you think. We'll show you how to craft the technologies of HTML and CSS so your stduent can start building their own websites.</p>
         </div>
-        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay=".2s">
+        <div class="col-lg-4 col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <div class="icon-header text-center">
             <%= image_tag "resume.svg" %>
           </div>
           <h4 class="text-center">Build Your Technical Resume</h4>
           <p>The technical job market is more interested in what you can actually build than a GPA or a certificate. The best technical resume isn't a piece of paper. It's a website on the internet, and after this class you'll have 12 of them.</p>
         </div>
-        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay=".5s">
-          <div class="icon-header text-center">
-            <%= image_tag "collaborate.svg" %>
-          </div>
-          <h4 class="text-center">Work Collaboratively</h4>
-          <p>
-            Our class will work collaboratively using GitHub. GitHub is how many companies collaborate on software. Knowledge of GitHub is becoming a prerequisite to work in technology. You’ll leave with a solid grasp of software collaboration.
-          </p>
-        </div>
-        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
+        <div class="col-lg-4 col-sm-6 wow fadeIn" data-wow-delay=".8s">
           <div class="icon-header text-center">
             <%= image_tag "dream.svg" %>
           </div>
@@ -79,48 +70,64 @@ title: Varisty Code
 <div class="secondary-background">
   <section id=modern-skills" class="container-fluid">
     <div class="row">
-      <div class="col-md-offset-2 col-md-4">
-        <div id="tech-logos">
-          <%= image_tag "tech.png" %>
-        </div>
+      <div class="col-md-offset-1 col-md-5">
+        <br /><br /><br />
+        <h2>Be Inspired. Learn. Build.</h2>
+        <p>Your student wont just learn valueable technical skills, they will be empowered to build the next iteration of the digital age. Each class will include a highlight of technical/business visionaries like Margaret Hamilton, Kevin Systrom, Katrina Lake, Bill Gates, and Steve Jobs.</p>
+        <p>These technical pioneers were no smarter than your student when they got their start. Often all it takes is a spark of inspiration and the right educational outlet to realize how feasible it is to shape the future.</p>
       </div>
-      <div class="col-md-offset-1 col-md-4">
-        <h2>Learn Modern Technologies</h2>
-        <p>Ask any technical hiring manager around and they will tell you that HTML, CSS, and JavaScript are required skills. They will allow you to build websites that work on computers, tablets, phones, and more.</p>
-        <p>As a class, we will work on our code on GitHub (it's kind of like the Google Docs of code).</p>
-        <p>Finally, when we are ready to share our websites with the world, we will host our code on Amazon Web Services (AWS), the world's leading cloud computing provider.</p>
+      <div class="col-md-offset-1 col-md-2">
+        <%= image_tag "Margaret_Hamilton.jpg", class: "img-thumbnail" %>
+        <p>Margaret Hamilton in 1969, standing next to the navigation software that she and her MIT team produced for the Apollo project</p>
+        <%= image_tag "kevin-systrom.jpg", class: "img-thumbnail" %>
+        <p>Kevin Systrom, was only able to start Instragram because he started coding in High School.</p>
+      </div>
+      <div class="col-md-2">
+        <br />
+        <br />
+        <%= image_tag "Bill-Gates.jpg", class: "img-thumbnail" %>
+        <p>Bill Gates, the founder of Microsoft, was only able to start his defining company because he started learning to code as an 8th grade student.</p>
+        <%= image_tag "Katrina-Lake.png", class: "img-thumbnail" %>
+        <p>Katrina Lake started her company Stitch Fix by combining her love of fashion with technology.</p>
       </div>
     </div>
   </section>
 </div>
 
-<!-- Action2 Section MailChimp Signup Form -->
-<section id="instructors" class="container-fluid text-left wow fadeIn">
-	<div class="row">
-		<div class="col-lg-12 text-center">
-			<h2>Instructor</h2>
-      <%= image_tag "nelson.jpg", class: "nelson-pic img-thumbnail" %>
-      <h2>Nelson Wittwer</h2>
-
-			<div class="row">
-				<div class="text-left col-lg-6 col-lg-offset-3">
-					<p>
-					While Nelson studied Management Information Systems at BYU, his tech career
-					really began when he was 16 when he started designing websites of his own.
-					</p>
-					<p>
-					Nelson has worked as a senior technical consultant for Ernst & Young, advising Fortune 500 companies. From there he went on to
-					work at MX building online/mobile banking software. He currently is the CTO of Orca Health, where he helps build mobile apps for
-					orthopedic surgeons. His software is used daily by millions of people.
-					</p>
-					<p>
-					Nelson is the proud father of three young children and is counting down the days until he can teach them how to code.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+<!-- Action2 Section -->
+<section id="jobs-quote-mobile" class="action3 container-fluid text-center visible-xs-block">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 text-left">
+      <p class="jobs-quote">
+        Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
+      </p>
+      <p class="jobs-quote">- Steve Jobs</p>
+    </div>
+  </div>
 </section>
+
+<div id="jobs-background">
+  <section id="jobs-quote-large" class="action3 container-fluid text-center hidden-xs">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <div class="row">
+          <div class="big-quote col-md-offset-7 col-md-1">
+            "
+          </div>
+          <div class="col-sm-4 text-left">
+            <p class="jobs-quote">
+              Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
+            </p>
+            <p class="jobs-quote">- Steve Jobs</p>
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+      </div>
+    </div>
+  </section>
+</div>
 
 <!-- Services Section -->
 <div class="secondary-background">
@@ -140,7 +147,6 @@ title: Varisty Code
             <li>Weekly homework/project review conducted by the instructors</li>
             <li>Instructor email availability for questions on projects and assignments</li>
           </ul>
-          <p>We are completely confident in our ability to transform you or your student's interest in the web into valuable technical skills. If you are not satisfied, we'll refund your tuition in full.</p>
           <p>Tuition will be billed on a monthly basis.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
@@ -183,7 +189,7 @@ title: Varisty Code
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>How big is each class?</h4>
           <p>
-            Ther are 14 students per class. Students will be asked to work with a lab partner each week. Lab partners are similar in age, which allows each lab group to progress at a rate they are comfortable with.</p>
+            Ther are 25 students per class. Students will be asked to work with a lab partner each week. Lab partners are similar in age, which allows each lab group to progress at a rate they are comfortable with.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>My student loved their experience! Do you offer any more courses?</h4>
@@ -205,54 +211,84 @@ title: Varisty Code
   </section>
 </div>
 
-<!-- Action2 Section -->
-<section id="jobs-quote-mobile" class="action3 container-fluid text-center visible-xs-block">
-  <div class="row">
-    <div class="col-xs-10 col-xs-offset-1 text-left">
-      <p class="jobs-quote">
-        Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
-      </p>
-      <p class="jobs-quote">- Steve Jobs</p>
-    </div>
-  </div>
-</section>
+<!-- Action2 Section MailChimp Signup Form -->
+<section id="instructors" class="container-fluid text-left wow fadeIn">
+	<div class="row">
+		<div class="col-lg-12 text-center">
+			<h2>Instructor</h2>
+      <%= image_tag "nelson.jpg", class: "nelson-pic img-thumbnail" %>
+      <h3>Nelson Wittwer</h3>
 
-<div id="jobs-background">
-  <section id="jobs-quote-large" class="action3 container-fluid text-center hidden-xs">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-1">
-        <div class="row">
-          <div class="big-quote col-md-offset-7 col-md-1">
-            "
-          </div>
-          <div class="col-sm-4 text-left">
-            <p class="jobs-quote">
-              Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
-            </p>
-            <p class="jobs-quote">- Steve Jobs</p>
-          </div>
-        </div>
-        <br>
-        <br>
-        <br>
-      </div>
-    </div>
-  </section>
-</div>
+			<div class="row">
+				<div class="text-left col-lg-6 col-lg-offset-3">
+					<p>
+					While Nelson studied Management Information Systems in college, his tech career
+					really began when he was 16 when he started coding websites of his own.
+					</p>
+					<p>
+					Nelson has worked as a senior technical consultant for Ernst & Young, advising Fortune 500 companies. From there he went on to
+					work at MX building online/mobile banking software; he was the CTO of Orca Health, where he helped build mobile apps for
+					orthopedic surgeons; and he is a software engineer at Nuvi analyzing tens of millions of social media mentions on a daily basis.
+					</p>
+          <p>
+            His software is used daily by millions of people.
+          </p>
+					<p>
+					Nelson is the proud father of three young children and is counting down the days until he can teach them how to code.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <div class="secondary-background">
   <section id="pre-register-footer" class="container-fluid">
     <div class="row">
       <div class="col-sm-12 text-center">
-        <button class="btn btn-lg btn-primary">
-          <%= link_to "Register Now", "https://varsitycode.herokuapp.com" %>
-        </button>
-        <br>
-        <br>
-        <br>
+        <h3>Enroll For Spring Quarter</h3>
         <p>
           Channel your student's love for technology into skills that will change their life.
         </p>
+        <button class="btn btn-lg btn-primary">
+          <%= link_to "Register Now", "https://varsitycode.herokuapp.com" %>
+        </button>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h3>Can't Make It This Spring?</h3>
+        <p>No problem! Sign up to be waitlisted for the Summer, or Fall Quarter.</p>
+
+        <br />
+        <br />
+        <br />
+        <div class="row">
+          <div class="col-sm-offset-2 col-sm-4">
+            <h5>Summer Quarter Courses:</h5>
+            <p>July 25 - October 3</p>
+            <br />
+            <p>Web Development 1</p>
+            <p>Web Development 2</p>
+            <br />
+            <button class="btn btn-lg btn-primary">
+              <%= link_to "Join Waitlist", "https://varsitycode.herokuapp.com/waitlist" %>
+            </button>
+          </div>
+          <div class="col-sm-4">
+            <h5>Fall Quarter Courses:</h5>
+            <p>October 10 - December 19</p>
+            <br />
+            <p>Web Development 1</p>
+            <p>Web Development 2</p>
+            <p>Web Development 3</p>
+            <br />
+            <button class="btn btn-lg btn-primary">
+              <%= link_to "Join Waitlist", "https://varsitycode.herokuapp.com/waitlist" %>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
