--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -259,7 +259,7 @@ title: Varisty Code
         <br />
         <br />
         <h3>Can't Make It This Spring?</h3>
-        <p>No problem! Sign up to be waitlisted for the Summer, or Fall Quarter.</p>
+        <p>No problem! Sign up to be waitlisted for the Summer or Fall Quarter.</p>
 
         <br />
         <br />
